--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
 <!-- webpage links -->
 	<body> 
 		<nav>
-			<a href="index.html">Home</a>
-			<a href="projects.html">Projects</a>
+			<a href="index">Home</a>
+			<a href="projects">Projects</a>
 			<a href="">About</a>
 
         </nav>
