--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ title: Somewhere_
 	<body> 
 		<nav>
 			<a href="">Home</a>
-			<a href="projects.html">Projects</a>
-			<a href="about.html">About</a>
+			<a href="projects">Projects</a>
+			<a href="about">About</a>
         </nav>
 <!-- background image -->
 		<style>
