--- a/projects.html
+++ b/projects.html
@@ -9,9 +9,9 @@
 <!-- webpage links -->
 	<body> 
 		<nav>
-			<a href="index.html">Home</a>
+			<a href="index">Home</a>
 			<a href="">Projects</a>
-			<a href="about.html">About</a>
+			<a href="about">About</a>
         </nav>
 <!-- background image -->
 <style>
