--- a/somewhere_.html
+++ b/somewhere_.html
@@ -38,9 +38,9 @@
 <!-- webpage links -->
 	<body> 
 		<nav>
-			<a href="index.html">Home</a>
-			<a href="projects.html">Projects</a>
-			<a href="about.html">About</a>
+			<a href="index">Home</a>
+			<a href="projects">Projects</a>
+			<a href="about">About</a>
         </nav>
 <!-- background image -->
 		<style>
