--- a/nothing.html
+++ b/nothing.html
@@ -31,7 +31,7 @@
 		</p>
 
         <div id="center">
-			<a href="projects.html"style="text-decoration:none">request backup</a>
+			<a href="projects"style="text-decoration:none">request backup</a>
 		</div> 
 	</body>
 </html>
