--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
 	}
 </style>
 <!-- text -->
-		<a href="somewhere_.html"style="text-decoration:none">
+		<a href="somewhere_"style="text-decoration:none">
 			<div style="background-image: url(images/Origin.png);
 				background-size: cover;
 				background-position: center;
@@ -35,7 +35,7 @@
 			</div>
 		</a>
 
-		<a href="nothing.html"style="text-decoration:none">
+		<a href="nothing"style="text-decoration:none">
 			<div style="background-image: url(images/4-22-22.png);
 				background-size: cover;
 				background-position: center;
