--- a/somewhere_.html
+++ b/somewhere_.html
@@ -173,7 +173,7 @@
 		</p>
 
         <div id="center">
-			<a href="projects.html"style="text-decoration:none">back</a>
+			<a href="projects"style="text-decoration:none">back</a>
 		</div> 
 	</body>
 </html>
