--- a/somewhere_.html
+++ b/somewhere_.html
@@ -59,6 +59,13 @@
 		Life in a desert.
 	</p>
 	<br><br>
+<!-- mini-background -->
+	<div style="background-image: url(images/Cloudless\ Sky.png);
+	background-size: cover;
+	background-position: center;
+	opacity: 50%;
+	margin: 5%">
+	<br>
 <!-- slideshow stuff -->
 		<div id="center">
 		<div class="slideshow-container">
@@ -166,12 +173,11 @@
 	}
     </script>
     <!-- bottom text -->
-		<p style="background-image: url('images/LucidLogo3.png');
-		font-size: small;
+		<p style="font-size: small;
 		text-align: center;">
-			Somewhere_ is an ongoing series about life in a desert. <br>
+			Somewhere_ is an ongoing series about life in a desert. <br><br>
 		</p>
-
+	</div>
         <div id="center">
 			<a href="projects"style="text-decoration:none">back</a>
 		</div> 
