--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 <!-- webpage links -->
 	<body> 
 		<nav>
-			<a href="index">Home</a>
+			<a href="./">Home</a>
 			<a href="projects">Projects</a>
 			<a href="">About</a>
 
