--- a/nothing.html
+++ b/nothing.html
@@ -9,7 +9,7 @@
 <!-- webpage links -->
 	<body> 
 		<nav>
-			<a href="index">Home</a>
+			<a href="./">Home</a>
 			<a href="projects">Projects</a>
 			<a href="about">About</a>
         </nav>
