--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
 	}
 </style>
 <!-- text -->
-		<a href="somewhere_"style="text-decoration:none">
+		<a href="somewhere"style="text-decoration:none">
 			<div style="background-image: url(images/Origin.png);
 				background-size: cover;
 				background-position: center;
